--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pascal Luttgens",
-  "license": "ISC",
+  "license": {
+    "type": "MIT",
+    "url": "https://opensource.org/licenses/MIT"
+  },
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.14.2",
