--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "bot-project-client",
-  "version": "1.0.0",
+  "name": "discord-mmo-client",
+  "version": "0.0.1",
   "description": "test for discord bot",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pascal Luttgens",
