--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonfile": "^2.2.3",
     "mongoose": "^4.3.7",
     "morgan": "^1.6.1",
+    "needle": "^1.0.0",
     "request": "^2.69.0",
     "winston": "^2.1.1",
     "ws": "^0.8.0"
