--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "async": "^1.5.2",
     "discord.io": "^1.7.1",
     "jsonfile": "^2.2.3",
-    "mongoose": "^4.3.7",
+    "needle": "^1.0.0",
     "request": "^2.69.0",
     "winston": "^2.1.1",
     "ws": "^0.8.0"
