#DG-50 Done work 4h Development  #DG-51 work 12h Development  #DG-47 Done work 1h30 Development

--- a/config.json
+++ b/config.json
@@ -1,8 +1,13 @@
 {
-    "apiUrl": "https://mighty-fortress-21458.herokuapp.com",
+    "api": {
+        "url": "https://mighty-fortress-21458.herokuapp.com",
+        "version": "1"
+    },
     "auth": {
         "email": "youremail",
-        "password": "yourpassword"
+        "password": "yourpassword",
+        "apiKey": "yourapikey",
+        "secret": "yoursecret"
     },
     "bot": {
         "avatar": "profile.jpg",
